--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Welcome to My Projects</h1>
-    <p>This is the landing page for my GitHub Pages site.</p>
+    <p>Select a project to explore:</p>
+    <ul>
+        <li><a href="https://danielthurmond.github.io/ALU/">ALU</a></li>
+        <li><a href="https://danielthurmond.github.io/RISC-V/">RISC-V</a></li>
+        <li><a href="https://danielthurmond.github.io/DigitalDesign/">Digital Design</a></li>
+        <li><a href="https://danielthurmond.github.io/SolarCar/">Solar Car</a></li>
+        <li><a href="https://danielthurmond.github.io/SiliWiki/">SiliWiki</a></li>
+    </ul>
 </body>
 </html>
